--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     }
   ],
   "require": {
-    "vierbergenlars/php-semver": "3.0.1"
+    "vierbergenlars/php-semver": "3.0.1",
+    "guzzlehttp/guzzle": "6.0.2"
   }
 }
