--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,33 @@
 {
-  "name": "organizeme/xtractor.io-sdk",
-  "description": "SDK to use xtractor.io provided REST API.",
-  "minimum-stability": "stable",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Thilo Habenreich",
-      "email": "thilo@habenreich.de"
+    "name": "swagger/swagger-client",
+    "version": "1.0.0",
+    "description": "",
+    "keywords": [
+        "swagger",
+        "php",
+        "sdk",
+        "api"
+    ],
+    "homepage": "http://swagger.io",
+    "license": "Apache v2",
+    "authors": [
+        {
+            "name": "Swagger and contributors",
+            "homepage": "https://github.com/swagger-api/swagger-codegen"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.3",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*"
     },
-    {
-      "name": "Bastian Konetzny",
-      "email": "b.konetzny@organize.me"
+    "require-dev": {
+        "phpunit/phpunit": "~4.0",
+        "satooshi/php-coveralls": "~0.6.1",
+        "squizlabs/php_codesniffer": "~2.0"
+    },
+    "autoload": {
+        "psr-4": { "Swagger\\Client\\" : "lib/" }
     }
-  ],
-  "require": {
-    "guzzlehttp/guzzle": "6.0.2"
-  }
 }
